--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,24 @@ project(minigame)
 find_package(OpenGL REQUIRED)
 find_package(glfw3 3.4 REQUIRED)
 
-execute_process(
-    COMMAND glad --api gl:core=3.3 --out-path=src/glad
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    RESULT_VARIABLE GIT_SUBMOD_RESULT
-)
+# execute_process(
+#     COMMAND glad --api gl:core=3.3,gles2,glsc2 --out-path=lib/glad
+#     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+#     RESULT_VARIABLE GIT_SUBMOD_RESULT
+# )
+
+# add_library(glad STATIC 
+# 	lib/glad/src/gl.c
+# 	lib/glad/src/gles1.c
+# 	lib/glad/src/gles2.c
+# 	lib/glad/src/glsc2.c
+# )
 
 include_directories(
 	src
-	src/glad/include
+	# lib/glad/include
+	include/
+	external/stb
 )
 
 add_subdirectory(src)
